# Evermind

./: .gitignore  BUILD.md  CHANGELOG.md  HANDOFF_V5_UI.md  INSTALL.md  LICENSE  OPENCLAW_GUIDE.md  README.md  README.zh.md  V7_56_OPTIMIZATION_REPORT.md  codex_review_round4.md  docker-compose.yml  evermind_godmode_final.html  handoff_to_codex.md  main.js  package-lock.json  package.json  preload.js  pyproject.toml  splash.html  start.command  test_deep_mode.py
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  agent_skills.py  agentic_runtime.py  agentic_tools.py  ai_bridge.py  asset_prefetcher.py  cli_backend.py  config_utils.py  evermind_bootstrap.py  executor.py  git_routes.py  html_postprocess.py  image_gen.py  incremental_stream_parser.py  lessons_store.py  mcp_client.py  node_roles.py  orchestrator.py  plugin_scanner.py  preview_validation.py  privacy.py  proxy_relay.py  quality_guard.py  react_bits_catalog.py  release_doctor.py  repo_clone.py  repo_map.py  report_generator.py  requirements.txt  runtime_paths.py  server.py  settings.py  task_classifier.py  task_handoff.py  task_store.py  udiff_apply.py  video_review.py  workflow_templates.py
backend/bench/: diagnose_direct_text.py  diagnose_direct_text_peer.py  prompts.json  run_benchmark.py
backend/plugins/: base.py  implementations.py  mcp_plugin.py
backend/prompt_templates/: analyst.yaml  assetimport.yaml  builder.yaml  debugger.yaml  deployer.yaml  harness_loader.py  imagegen.yaml  merger.yaml  patcher.yaml  planner.yaml  polisher.yaml  reviewer.yaml  router.yaml  spritesheet.yaml  tester.yaml  uidesign.yaml
backend/providers/: __init__.py  anthropic.py  base.py  deepseek.py  doubao.py  gemini.py  kimi.py  meta_llama.py  minimax.py  mistral.py  openai.py  qwen.py  registry.py  xai.py  zhipu.py
backend/runtime_vendor/: README.md
backend/scripts/: browser_selfcheck.py  browser_use_runner.py  desktop_run_goal_monitor.py  live_agent_browser_smoke.py  mcp_server.py  multi_difficulty_smoke.py
backend/skills/: exhaustive-analysis.md
backend/templates/: base.css  dashboard_analytics.html  game.css  website.css  website_landing.html
backend/tests/: e2e_smoke.py  test_agent_skills.py  test_agentic_runtime.py  test_ai_bridge.py  test_browser_plugin.py  test_config_utils.py  test_connector_protocol.py  test_dag_chaining.py  test_deep_mode_timeouts.py  test_dispatch_bridging.py  test_executor.py  (+26 more)
docs/: NODE_GUIDE.md  codex-review-report.md  custom-mode-guide-zh.md  evermind-website-plan.md  node-orchestration-guide-zh.md  qa-preview-session-plan.md
electron/: icon.icns  main.js  package-lock.json  package.json  preload.js  qa-session.js  splash.html
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
(+193 files in other folders)
